# JNILibrary

./: CMakeLists.txt  CheckAndBuild.ps1  org_example_Native.cpp  org_example_Native.h
build_ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
